--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.10.3"
+    "react-intersection-observer": "^9.10.3",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
